--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.15.11",
+    "astro": "^4.15.12",
     "date-fns": "^3.3.1",
-    "tailwindcss": "^3.4.1",
-    "nodemailer": "^6.9.9"
+    "nodemailer": "^6.9.9",
+    "tailwindcss": "^3.4.1"
   }
 }
