--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.7",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.2.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.15.12",
+    "@astrojs/cloudflare": "^12.1.0",
+    "@astrojs/mdx": "^4.0.2",
+    "@astrojs/rss": "^4.0.10",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^5.0.9",
     "date-fns": "^3.3.1",
     "nodemailer": "^6.9.9",
     "tailwindcss": "^3.4.1"
